--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm i
     - name: Attempt build
-      run: npm run build --if-present
+      run: CI=false npm run build --if-present
   test:
     runs-on: ubuntu-latest
     steps:
