--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/package-lock.json
 /.pnp
 .pnp.js
 
@@ -17,7 +18,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/.vscode
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# firebase stuff
+.firebaserc
+firebase-debug.log
+ui-debug.log
+firebase.json
