--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "deploy": "firebase deploy",
     "serve": "firebase serve",
     "emulate": "firebase emulators:start",
-    "test": "react-scripts test --passWithNoTests",
+    "test": "jest test --passWithNoTests",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .js,.jsx"
   },
