--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "axios": "^0.21.0",
     "axois": "^0.0.1-security",
+    "emotion-theming": "^10.0.27",
     "firebase": "^7.22.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
@@ -13,6 +17,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^2.2.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.3",
