--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.0.0",
     "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
     "axois": "^0.0.1-security",
     "emotion-theming": "^10.0.27",
     "firebase": "^7.22.1",
+    "framer-motion": "^2.9.4",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
