--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
     "firebase": "^7.22.1",
-    "framer-motion": "^2.9.5",
+    "framer-motion": "^2.9.5-rc.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
