--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
     "firebase": "^7.22.1",
+    "flesch": "^1.0.5",
     "framer-motion": "^2.9.5-rc.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
@@ -21,7 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "syllable": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
