--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
     "es2021": true,
     "jest/globals": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "google"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -13,10 +17,22 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks", "jest"],
+  "plugins": [
+    "react",
+    "react-hooks",
+    "jest"
+  ],
   "rules": {
+    "no-console": 2,
+    "require-atomic-updates": 2,
+    "eqeqeq": 2,
     "react/prop-types": 0,
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "object-curly-spacing": 0,
+    "quotes": 0,
+    "require-jsdoc": 0,
+    "max-len": 0,
+    "eol-last": 0
   },
   "settings": {
     "react": {
