--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^2.9.5-rc.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "node-sass": "^4.12.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
@@ -23,7 +24,8 @@
     "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "syllable": "^4.1.0"
+    "syllable": "^4.1.0",
+    "validator": "^13.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
