Fix linting issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,10 @@
   "rules": {
     "react/prop-types": 0,
     "no-unused-vars": 0
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
