--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
   ],
   "rules": {
     "no-console": 2,
-    "require-atomic-updates": 2,
+    "require-atomic-updates": 1,
     "eqeqeq": 2,
     "react/prop-types": 0,
     "no-unused-vars": 0,
@@ -32,7 +32,12 @@
     "quotes": 0,
     "require-jsdoc": 0,
     "max-len": 0,
-    "eol-last": 0
+    "eol-last": 0,
+    "indent": 0,
+    "new-cap": 0,
+    "valid-jsdoc": 0,
+    "arrow-parens": 0,
+    "padded-blocks": 0
   },
   "settings": {
     "react": {
