--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^4.12.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.3.0",
