--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "array-move": "^3.0.1",
     "axios": "^0.21.0",
     "firebase": "^7.22.1",
     "flesch": "^1.0.5",
@@ -16,14 +17,17 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "node-sass": "^4.12.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-datepicker": "^3.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-firebase-hooks": "^2.2.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.3",
+    "react-sortable-hoc": "^1.11.0",
+    "react-sortablejs": "^6.0.0",
+    "sortablejs": "^1.13.0",
     "styled-components": "^5.2.0",
     "syllable": "^4.1.0",
     "validator": "^13.5.2"
@@ -55,6 +59,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/sortablejs": "^1.10.6",
     "eslint": "^7.10.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
