--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment-timezone": "^0.5.33",
     "node-sass": "^4.12.0",
     "react": "^16.14.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
     "react-firebase-hooks": "^2.2.0",
