Removed functions and security rules as that will be handled by studyfind-manage

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "postinstall": "(cd functions && npm install);",
-    "deploy": "firebase deploy",
+    "deploy": "yarn build && firebase deploy",
     "serve": "firebase serve",
     "emulate": "firebase emulators:start",
     "test": "jest test --passWithNoTests",
