Removed functions linting

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "emulate": "firebase emulators:start",
     "test": "jest test --passWithNoTests",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src ./functions/src --ext .js,.jsx"
+    "lint": "eslint ./src --ext .js,.jsx"
   },
   "browserslist": {
     "production": [
