--- a/.eslintrc
+++ b/.eslintrc
@@ -15,8 +15,93 @@
   },
   "plugins": ["react", "react-hooks", "jest"],
   "rules": {
-    "react/prop-types": 0,
-    "no-unused-vars": 1
+    "for-direction": "error",
+    "no-unused-vars": "error",
+    "no-await-in-loop": "error",
+    "no-cond-assign": "error",
+    "no-console": "warn",
+    "no-constant-condition": "error",
+    "no-dupe-args": "error",
+    "no-dupe-else-if": "error",
+    "no-dupe-keys": "error",
+    "no-duplicate-case": "error",
+    "no-empty": "error",
+    "no-ex-assign": "error",
+    "no-extra-boolean-cast": ["error", { "enforceForLogicalOperands": true }],
+    "no-extra-parens": "off",
+    "no-extra-semi": "error",
+    "no-func-assign": "error",
+    "no-import-assign": "error",
+    "no-inner-declarations": "error",
+    "no-invalid-regexp": "error",
+    "no-irregular-whitespace": "error",
+    "no-misleading-character-class": "error",
+    "no-obj-calls": "error",
+    "no-promise-executor-return": "off",
+    "no-sparse-arrays": "error",
+    "no-template-curly-in-string": "warn",
+    "no-unexpected-multiline": "error",
+    "no-unreachable": "error",
+    "no-unreachable-loop": "error",
+    "no-unsafe-finally": "error",
+    "no-unsafe-negation": "error",
+    "no-unsafe-optional-chaining": ["error", { "disallowArithmeticOperators": true }],
+    "require-atomic-updates": "error",
+    "use-isnan": "error",
+    "valid-typeof": "error",
+    "array-callback-return": "error",
+    "block-scoped-var": "error",
+    "consistent-return": "off",
+    "curly": "off",
+    "default-case": "off",
+    "default-case-last": "error",
+    "default-param-last": "error",
+    "dot-notation": "error",
+    "dot-location": ["error", "property"],
+    "eqeqeq": "error",
+    "no-alert": "error",
+    "no-else-return": ["error", { "allowElseIf": false }],
+    "no-empty-pattern": "error",
+    "no-eval": "error",
+    "no-extend-native": "error",
+    "no-fallthrough": "error",
+    "no-floating-decimal": "error",
+    "no-global-assign": "error",
+    "no-implicit-coercion": "off",
+    "no-implied-eval": "error",
+    "no-lone-blocks": "error",
+    "no-loop-func": "error",
+    "no-magic-numbers": "off",
+    "no-multi-spaces": "error",
+    "no-multi-str": "error",
+    "no-new": "error",
+    "no-new-func": "error",
+    "no-new-wrappers": "error",
+    "no-octal": "error",
+    "no-param-reassign": "error",
+    "no-redeclare": "error",
+    "no-return-assign": "error",
+    "no-return-await": "error",
+    "no-script-url": "error",
+    "no-self-assign": "error",
+    "no-self-compare": "error",
+    "no-throw-literal": "error",
+    "no-unmodified-loop-condition": "error",
+    "no-useless-catch": "error",
+    "no-useless-concat": "error",
+    "no-useless-escape": "warn",
+    "no-useless-return": "error",
+    "prefer-promise-reject-errors": "off",
+    "yoda": ["error", "never", { "exceptRange": true }],
+    "init-declarations": ["error", "always"],
+    "no-delete-var": "error",
+    "no-shadow-restricted-names": "error",
+    "no-undef": "error",
+    "no-undef-init": "error",
+    "no-undefined": "off",
+    "no-use-before-define": "error",
+    "no-var": "error",
+    "react/prop-types": "off"
   },
   "settings": {
     "react": {
