--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.0.0",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
-    "firebase": "^7.22.1",
-    "flesch": "^1.0.5",
-    "framer-motion": "^2.9.5-rc.0",
-    "lodash": "^4.17.20",
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "firebase": "^8.6.3",
+    "flesch": "^2.0.0",
+    "framer-motion": "^4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "node-sass": "^4.12.0",
     "react": "^17.0.2",
-    "react-dom": "^16.14.0",
-    "react-firebase-hooks": "^2.2.0",
-    "react-icons": "^3.11.0",
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.1.0",
-    "react-scripts": "3.4.3",
-    "react-sortable-hoc": "^1.11.0",
-    "styled-components": "^5.2.0",
-    "syllable": "^4.1.0",
-    "validator": "^13.5.2"
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "^4.0.3",
+    "react-sortable-hoc": "^2.0.0",
+    "styled-components": "^5.3.0",
+    "syllable": "^5.0.0",
+    "validator": "^13.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
