--- a/.eslintrc
+++ b/.eslintrc
@@ -101,7 +101,9 @@
     "no-undefined": "off",
     "no-use-before-define": "error",
     "no-var": "error",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
