--- a/.eslintrc
+++ b/.eslintrc
@@ -101,6 +101,23 @@
     "no-undefined": "off",
     "no-use-before-define": "error",
     "no-var": "error",
+    "prefer-template": "warn",
+    "prefer-const": "error",
+    "prefer-arrow-callback": "error",
+    "object-shorthand": "error",
+    "no-useless-rename": "error",
+    "no-useless-computed-key": "error",
+    "template-curly-spacing": ["error", "never"],
+    // "prefer-destructuring": [
+    //   "warn",
+    //   {
+    //     "array": false,
+    //     "object": true
+    //   },
+    //   {
+    //     "enforceForRenamedProperties": false
+    //   }
+    // ],
     "react/prop-types": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off"
