--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
     "react-sortable-hoc": "^2.0.0",
+    "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "syllable": "^5.0.0",
     "validator": "^13.6.0"
