--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-google-places-autocomplete": "^3.3.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
