--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "studyfind-researcher",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,css,html,json}'",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
+    "test": "jest test --passWithNoTests",
+    "build": "react-scripts build",
+    "stage": "npm run build && firebase use studyfind-development && firebase deploy --only hosting",
+    "deploy": "npm run build && firebase use studyfind-researcher && firebase deploy --only hosting"
+  },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@stripe/stripe-js": "^1.17.1",
     "firebase": "^8.6.3",
     "flesch": "^2.0.0",
     "framer-motion": "^4",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
-    "react-google-places-autocomplete": "^3.3.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
@@ -27,28 +32,6 @@
     "styled-components": "^5.3.0",
     "syllable": "^5.0.0",
     "validator": "^13.6.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "yarn build && firebase deploy",
-    "serve": "firebase serve",
-    "emulate": "firebase emulators:start",
-    "test": "jest test --passWithNoTests",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src --ext .js,.jsx"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -63,5 +46,17 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "firebase-tools": "^8.13.1",
     "jest-styled-components": "^7.0.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
