--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 
 # dependencies
 /node_modules
-/package-lock.json
 /.pnp
 .pnp.js
-
-.env
 
 # testing
 /coverage
@@ -14,19 +11,15 @@
 # production
 /build
 
+.env.*
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-/.vscode
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# firebase stuff
-firebase-debug.log
-firestore-debug.log
-ui-debug.log
