--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "test": "jest test --passWithNoTests",
     "build": "react-scripts build",
-    "stage": "npm run build && firebase use studyfind-development && firebase deploy --only hosting",
-    "deploy": "npm run build && firebase use studyfind-researcher && firebase deploy --only hosting"
+    "stage": "env-cmd -f ./.env.development npm run build && firebase use studyfind-development && firebase deploy --only hosting",
+    "deploy": "env-cmd -f ./.env.production npm run build && firebase use studyfind-researcher && firebase deploy --only hosting"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
@@ -38,6 +38,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/sortablejs": "^1.10.6",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
