--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           node-version: 12
       - name: Deploying
-      - run: npm ci
-      - run: npm run build
-      - run: npm run stage -- --token ${{secrets.FIREBASE_TOKEN}}
+        run: npm ci
+        run: npm run build
+        run: npm run stage -- --token ${{secrets.FIREBASE_TOKEN}}
