--- a/.github/workflows/development-ci.yml
+++ b/.github/workflows/development-ci.yml
@@ -16,8 +16,8 @@ jobs:
         with:
           node-version: 12
       - name: Linting
-      - run: npm ci
-      - run: npm run lint
+        run: npm ci
+        run: npm run lint
 
   test:
     runs-on: ubuntu-latest
@@ -27,8 +27,8 @@ jobs:
         with:
           node-version: 12
       - name: Testing
-      - run: npm ci
-      - run: npm run test
+        run: npm ci
+        run: npm run test
 
   build:
     runs-on: ubuntu-latest
@@ -38,5 +38,5 @@ jobs:
         with:
           node-version: 12
       - name: Building
-      - run: npm ci
-      - run: npm run build
+        run: npm ci
+        run: npm run build
