--- a/.github/workflows/development-ci.yml
+++ b/.github/workflows/development-ci.yml
@@ -15,9 +15,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Linting
-        run: npm ci
-        run: npm run lint
+      - run: npm ci
+      - run: npm run lint
 
   test:
     runs-on: ubuntu-latest
@@ -26,9 +25,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Testing
-        run: npm ci
-        run: npm run test
+      - run: npm ci
+      - run: npm run test
 
   build:
     runs-on: ubuntu-latest
@@ -37,6 +35,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Building
-        run: npm ci
-        run: npm run build
+      - run: npm ci
+      - run: npm run build
