Completed CI/CD setup

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f ./.env.production react-scripts start",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,css,html,json}'",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "test": "jest test --passWithNoTests",
     "build": "react-scripts build",
-    "stage": "env-cmd -f ./.env.development npm run build && firebase use studyfind-development && firebase deploy --only hosting",
-    "deploy": "env-cmd -f ./.env.production npm run build && firebase use studyfind-researcher && firebase deploy --only hosting"
+    "stage": "env-cmd -f ./.env.development firebase deploy --only hosting --project studyfind-development",
+    "deploy": "env-cmd -f ./.env.production firebase deploy --only hosting --project studyfind-researcher"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
