--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,15 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "components/*": ["./src/components/*"],
+      "context/*": ["./src/context/*"],
+      "database/*": ["./src/database/*"],
+      "hooks/*": ["./src/hooks/*"],
+      "images/*": ["./src/images/*"],
+      "pages/*": ["./src/pages/*"],
+      "templates/*": ["./src/templates/*"],
+      "utils/*": ["./src/utils/*"]
+    }
   }
 }
