Changed start script from using production env to development env

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "env-cmd -f ./.env.production react-scripts start",
+    "start": "env-cmd -f ./.env.development react-scripts start",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,css,html,json}'",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "test": "jest test --passWithNoTests",
