--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Development CD
 
 on:
@@ -19,12 +16,13 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run build
+      - run: ls -l
+      - run: cat firebase.json
       - uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting --project studyfind-development
         env:
           FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
-          PROJECT_PATH: ./build
           REACT_APP_FIREBASE_API_KEY: ${{secrets.DEVELOPMENT_FIREBASE_API_KEY}}
           REACT_APP_FIREBASE_APP_ID: ${{secrets.DEVELOPMENT_FIREBASE_APP_ID}}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{secrets.DEVELOPMENT_FIREBASE_AUTH_DOMAIN}}
