--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -17,6 +17,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: ls -l
+      - run: ls -l ./build
       - run: cat firebase.json
       - uses: w9jds/firebase-action@master
         with:
