--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -19,11 +19,14 @@ jobs:
       - run: ls -l
       - run: ls -l ./build
       - run: cat firebase.json
-      - uses: w9jds/firebase-action@master
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy --only hosting --project studyfind-development
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_STUDYFIND_DEVELOPMENT }}"
+          channelId: live
+          projectId: studyfind-development
         env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
+          FIREBASE_CLI_PREVIEWS: hostingchannels
           REACT_APP_FIREBASE_API_KEY: ${{secrets.DEVELOPMENT_FIREBASE_API_KEY}}
           REACT_APP_FIREBASE_APP_ID: ${{secrets.DEVELOPMENT_FIREBASE_APP_ID}}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{secrets.DEVELOPMENT_FIREBASE_AUTH_DOMAIN}}
