--- a/.github/workflows/production-cd.yml
+++ b/.github/workflows/production-cd.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Production CD
 
 on:
@@ -19,12 +16,14 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run build
-      - uses: w9jds/firebase-action@master
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy --only hosting --project studyfind-researcher
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_STUDYFIND_RESEARCHER }}"
+          channelId: live
+          projectId: studyfind-researcher
         env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
-          PROJECT_PATH: ./build
+          FIREBASE_CLI_PREVIEWS: hostingchannels
           REACT_APP_FIREBASE_API_KEY: ${{secrets.PRODUCTION_FIREBASE_API_KEY}}
           REACT_APP_FIREBASE_APP_ID: ${{secrets.PRODUCTION_FIREBASE_APP_ID}}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{secrets.PRODUCTION_FIREBASE_AUTH_DOMAIN}}
