--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -25,6 +25,7 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_STUDYFIND_DEVELOPMENT }}"
           channelId: live
           projectId: studyfind-development
+          target: researcher
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
           REACT_APP_FIREBASE_API_KEY: ${{secrets.DEVELOPMENT_FIREBASE_API_KEY}}
