--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -25,6 +25,7 @@ jobs:
           echo REACT_APP_FIREBASE_PROJECT_ID: ${{secrets.DEVELOPMENT_FIREBASE_PROJECT_ID}} >> .env
           echo REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.DEVELOPMENT_FIREBASE_STORAGE_BUCKET}} >> .env
           cat .env
+      - run: cat .env
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
