--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -24,6 +24,7 @@ jobs:
           REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.DEVELOPMENT_FIREBASE_STORAGE_BUCKET}}
           EOF
       - run: ls -l
+      - run: cat .env
       - run: npm ci
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
