--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -22,7 +22,7 @@ jobs:
           REACT_APP_FIREBASE_PROJECT_ID: ${{secrets.DEVELOPMENT_FIREBASE_PROJECT_ID}}
           REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.DEVELOPMENT_FIREBASE_STORAGE_BUCKET}}
           EOF
-      - run: ls -l
+      - run: ls -la
       - run: cat .env.development
       - run: npm ci
       - run: npm run build
