Log env variable

--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -24,6 +24,7 @@ jobs:
           EOF
       - run: ls -la
       - run: cat .env.development
+      - run: echo $REACT_APP_FIREBASE_API_KEY
       - run: npm ci
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
