--- a/.github/workflows/development-cd.yml
+++ b/.github/workflows/development-cd.yml
@@ -24,7 +24,6 @@ jobs:
           EOF
       - run: ls -la
       - run: cat .env.development
-      - run: echo $REACT_APP_FIREBASE_API_KEY
       - run: npm ci
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
@@ -36,3 +35,10 @@ jobs:
           target: researcher
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          REACT_APP_FIREBASE_API_KEY: ${{secrets.DEVELOPMENT_FIREBASE_API_KEY}}
+          REACT_APP_FIREBASE_APP_ID: ${{secrets.DEVELOPMENT_FIREBASE_APP_ID}}
+          REACT_APP_FIREBASE_AUTH_DOMAIN: ${{secrets.DEVELOPMENT_FIREBASE_AUTH_DOMAIN}}
+          REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{secrets.DEVELOPMENT_FIREBASE_MESSAGING_SENDER_ID}}
+          REACT_APP_FIREBASE_PROJECT_ID: ${{secrets.DEVELOPMENT_FIREBASE_PROJECT_ID}}
+          REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.DEVELOPMENT_FIREBASE_STORAGE_BUCKET}}
+      - run: echo $REACT_APP_FIREBASE_API_KEY
